[tool.poetry]
name = "ssp-analysis"
version = "0.1.0"
description = "Projeto usado para analisar os dados de veículos e celulares subtraídos em São Paulo, divulgados pela Secretaria de Segurança Pública de São Paulo (SSP SP)."
authors = ["Daniel Marques <dnmarques@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
streamlit-folium = "^0.20.0"
folium = "^0.16.0"
altair = "^5.3.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
